--- a/CapaPresentacionAdmin/Views/Shared/_Layout.cshtml
+++ b/CapaPresentacionAdmin/Views/Shared/_Layout.cshtml
@@ -40,11 +40,12 @@
                     <div class="sb-sidenav-menu">
                         <div class="nav">
                             <div class="sb-sidenav-menu-heading">Resumen</div>
-                            <a class="nav-link" href="index.html">
+                            @* Asi se genera dinamicamente el desplazamiento entre paginas con los controladores y la vista razor  *@
+                            <a class="nav-link" href="@Url.Action("Index","Home")">
                                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                                 Dashboard
                             </a>
-                        <a class="nav-link" href="index.html">
+                            <a class="nav-link" href="@Url.Action("Usuarios","Home")">
                             <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
                             Usuarios
                         </a>
@@ -92,15 +93,15 @@
                                 </nav>
                             </div> *@
                             <div class="sb-sidenav-menu-heading">Mantenimiento</div>
-                            <a class="nav-link" href="charts.html">
+                                <a class="nav-link" href="@Url.Action("Categoria","Mantenedor")">
                                 <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                                 Categorias
                             </a>
-                            <a class="nav-link" href="tables.html">
+                                <a class="nav-link" href="@Url.Action("Marca","Mantenedor")">
                                 <div class="sb-nav-link-icon"><i class="fas fa-bookmark"></i></div>
                                 Marcas
                             </a>
-                        <a class="nav-link" href="tables.html">
+                        <a class="nav-link" href="@Url.Action("Producto","Mantenedor")">
                             <div class="sb-nav-link-icon"><i class="fas fa-boxes"></i></div>
                             Productos
                         </a>
